fixed horizontal spacing of stat-blocks in desktop mode by using justify-content

--- a/styles.css
+++ b/styles.css
@@ -90,6 +90,7 @@ img {
     .stats-container{
         display: flex;
         flex-direction: row;
+        justify-content: space-around;
     
     
     }
